hphp/hack/test/typecheck/as_expression/invalid_hint_classname_with_generic2.php
<?hh // strict

final class C<T> {}

function foo<T>(mixed $x): void {
  $x as classname<C<T>>;
  hh_show($x);
}
